progress with Harvard presentation

--- a/presentations/2021-03-21-bsm/2021-03-21-bsm.tex
+++ b/presentations/2021-03-21-bsm/2021-03-21-bsm.tex
@@ -49,6 +49,29 @@ brains}
 
 \section{Genetics of Schizophrenia}
 
+\begin{frame}{GWAS}
+
+\begin{columns}[t]
+\begin{column}{0.5\textwidth}
+\begin{center}
+SCZ GWAS loci
+
+\includegraphics[width=1.0\columnwidth]{from-others/scz-gwas-manhattanplot.png}
+
+\footnotesize
+\(\approx\) 500 ``schizophrenia GWAS genes''
+\end{center}
+\end{column}
+
+\begin{column}{0.5\textwidth}
+
+\includegraphics[width=1.0\columnwidth]{from-others/brainstorm-consortium-science2018-fig2.jpg}
+
+{\tiny Brainstorm Consortium 2018 Science}
+\end{column}
+\end{columns}
+\end{frame}
+
 \begin{frame}{Genomic studies on schizophrenia}
 \begin{center}
 \includegraphics[width=1.1\textwidth]{from-others/schizophrenia-Foley2017-Fig1.png}
@@ -94,7 +117,7 @@ w/o ASD & 1.9 \times 10^{-3} \\
 \end{frame}
 
 \begin{frame}
-\includegraphics[height=0.9\textheight]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/symmetric-scatter-matrix.pdf}
+\includegraphics[height=0.9\textheight]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/symmetric-scatter-matrix_scz.pdf}
 \end{frame}
 
 \begin{frame}{Modeling the number of calls in SCZ GWAS genes}
@@ -150,17 +173,6 @@ model & \(\hat{\beta}_\mathrm{SCZ} \pm \mathrm{S.E}\) & p-value:
 1 + Dx + ageOfDeath & \(0.71 \pm 0.28\) & 0.011 & -0.30 \\
 \end{tabular}
 \end{center}
-\end{frame}
-
-\begin{frame}{Shared heritability of psychiatric disorders}
-\small
-\begin{itemize}
-\item 6 additional disorders/genesets
-\item ``Psychiatric GWAS'' geneset: 1270 genes
-\end{itemize}
-\includegraphics[height=0.65\textheight]{from-others/brainstorm-consortium-science2018-fig2.jpg}
-
-{\tiny Brainstorm Consortium 2018 Science}
 \end{frame}
 
 \begin{frame}{Best models for various categories}
