--- a/presentations/bsm-ms/bsm-ms.tex
+++ b/presentations/bsm-ms/bsm-ms.tex
@@ -52,8 +52,7 @@ The abstract
 
 \section*{Introduction}
 
-Schizophrenia is a psychiatric disorder, which... heritability: 0.8 ...\cite{Kahn2015}.
-
+Schizophrenia is a psychiatric disorder, which... heritability: 0.8 ...\cite{Kahn2015}.  
 GWAS (reviewed by \cite{Visscher2017}) has been essential in clarifying the
 genetic of architecture of schizophrenia~\cite{Ripke2014,Pardinas2018} and other psychiatric disorders
 \cite{Sullivan2012}: they are polygenic and much of the heritability is due to
@@ -75,13 +74,26 @@ genes\cite{Fromer2014,Purcell2014} ... and loss of function intolerant
 genes~\cite{Rees2020,Singh2017} but found no evidence for increased genome
 wide germline single nucleotide mutation rate in schizophrenics.
 
-Despite much progress translation of the results from the aforementioned
-genetic studies into effective medical diagnostic and treatment methods for
-schizophrenia is still lacking~\cite{Breen2016,Foley2017}.  Besides limited sample size and underrepresented
-ethnic groups in populations studies~\cite{Visscher2017} and the difficulty of
-interpreting polygenic signals~\cite{Boyle2017},
-of 
-Somatic variants \cite{Insel2014}
+Despite much progress translation of the results of the aforementioned studies
+into effective medical diagnostic and treatment methods for schizophrenia is
+still lacking~\cite{Breen2016,Foley2017}. Increasing sample sizes, especially
+for currently underrepresented ethnic groups, is expected to uncover new
+potential risk genes and therapeutic targets~\cite{Visscher2017}, but the difficulty of interpreting
+polygenic signals from SNP arrays will persist~\cite{Boyle2017}.  Rare and de
+novo variants detected by sequencing afford somewhat easier interpretation.
+However, besides germline variants a number of distinct genetic and epigenetic
+processes are hypothesized to play a role in schizophrenia and psychiatric
+disorders~\cite{PsychENCODEConsortium2015}.
+
+Somatic variants have been called the dark matter of psychiatric
+genetics~\cite{Insel2014}.  Their systematic, genome-wide study has just begun
+with the announcement of the Brain Somatic Mosaicism
+project~\cite{McConnell2017}.  Within that project we and others recently
+developed new best practices and tools for calling somatic variants from brain
+samples based on bulk tissue sequencing data~\cite{Wang2021}.  In the present
+work, for the first time, we apply these analytical tools to deep, whole
+genome sequencing data from the DLPFC of \(m\) schizophrenic and \(n\) control
+individuals.
 
 %A related question is the number of imprinted genes in the human brain.  Some
 %1,300 genes were estimated to be imprinted in the mouse
