--- a/presentations/bsm-ms/bsm.bib
+++ b/presentations/bsm-ms/bsm.bib
@@ -14807,20 +14807,22 @@ url = {http://www.scopus.com/inward/record.url?eid=2-s2.0-0037458010{\&}partnerI
 volume = {100},
 year = {2003}
 }
-@article{PsychENCODEConsortium2015,
-author = {{PsychENCODE Consortium} and Akbarian, Schahram and Liu, Chunyu and Knowles, James A and Vaccarino, Flora M and Farnham, Peggy J and Crawford, Gregory E and Jaffe, Andrew E and Pinto, Dalila and Dracheva, Stella and Geschwind, Daniel H and Mill, Jonathan and Nairn, Angus C and Abyzov, Alexej and Pochareddy, Sirisha and Prabhakar, Shyam and Weissman, Sherman and Sullivan, Patrick F and State, Matthew W and Weng, Zhiping and Peters, Mette A and White, Kevin P and Gerstein, Mark B and Amiri, Anahita and Armoskus, Chris and Ashley-Koch, Allison E and Bae, Taejeong and Beckel-Mitchener, Andrea and Berman, Benjamin P and Coetzee, Gerhard A and Coppola, Gianfilippo and Francoeur, Nancy and Fromer, Menachem and Gao, Robert and Grennan, Kay and Herstein, Jennifer and Kavanagh, David H and Ivanov, Nikolay A and Jiang, Yan and Kitchen, Robert R and Kozlenkov, Alexey and Kundakovic, Marija and Li, Mingfeng and Li, Zhen and Liu, Shuang and Mangravite, Lara M and Mattei, Eugenio and Markenscoff-Papadimitriou, Eirene and Navarro, F{\'{a}}bio C P and North, Nicole and Omberg, Larsson and Panchision, David and Parikshak, Neelroop and Poschmann, Jeremie and Price, Amanda J and Purcaro, Michael and Reddy, Timothy E and Roussos, Panos and Schreiner, Shannon and Scuderi, Soraya and Sebra, Robert and Shibata, Mikihito and Shieh, Annie W and Skarica, Mario and Sun, Wenjie and Swarup, Vivek and Thomas, Amber and Tsuji, Junko and van Bakel, Harm and Wang, Daifeng and Wang, Yongjun and Wang, Kai and Werling, Donna M and Willsey, A Jeremy and Witt, Heather and Won, Hyejung and Wong, Chloe C Y and Wray, Gregory A and Wu, Emily Y and Xu, Xuming and Yao, Lijing and Senthil, Geetha and Lehner, Thomas and Sklar, Pamela and Sestan, Nenad},
-doi = {10.1038/nn.4156},
-journal = {Nature neuroscience},
-keywords = {genomics,psychiatric,review},
-mendeley-tags = {genomics,psychiatric,review},
-month = {dec},
-number = {12},
-pages = {1707--12},
-pmid = {26605881},
-title = {{The PsychENCODE project.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/26605881 https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4675669/ http://www.nature.com/neuro/journal/v18/n12/full/nn.4156.html},
-volume = {18},
-year = {2015}
+
+@Article{PsychENCODEConsortium2015,
+  author        = {{PsychENCODE Consortium} and Akbarian, Schahram and Liu, Chunyu and Knowles, James A and Vaccarino, Flora M and Farnham, Peggy J and Crawford, Gregory E and Jaffe, Andrew E and Pinto, Dalila and Dracheva, Stella and Geschwind, Daniel H and Mill, Jonathan and Nairn, Angus C and Abyzov, Alexej and Pochareddy, Sirisha and Prabhakar, Shyam and Weissman, Sherman and Sullivan, Patrick F and State, Matthew W and Weng, Zhiping and Peters, Mette A and White, Kevin P and Gerstein, Mark B and Amiri, Anahita and Armoskus, Chris and Ashley-Koch, Allison E and Bae, Taejeong and Beckel-Mitchener, Andrea and Berman, Benjamin P and Coetzee, Gerhard A and Coppola, Gianfilippo and Francoeur, Nancy and Fromer, Menachem and Gao, Robert and Grennan, Kay and Herstein, Jennifer and Kavanagh, David H and Ivanov, Nikolay A and Jiang, Yan and Kitchen, Robert R and Kozlenkov, Alexey and Kundakovic, Marija and Li, Mingfeng and Li, Zhen and Liu, Shuang and Mangravite, Lara M and Mattei, Eugenio and Markenscoff-Papadimitriou, Eirene and Navarro, F{\'{a}}bio C P and North, Nicole and Omberg, Larsson and Panchision, David and Parikshak, Neelroop and Poschmann, Jeremie and Price, Amanda J and Purcaro, Michael and Reddy, Timothy E and Roussos, Panos and Schreiner, Shannon and Scuderi, Soraya and Sebra, Robert and Shibata, Mikihito and Shieh, Annie W and Skarica, Mario and Sun, Wenjie and Swarup, Vivek and Thomas, Amber and Tsuji, Junko and van Bakel, Harm and Wang, Daifeng and Wang, Yongjun and Wang, Kai and Werling, Donna M and Willsey, A Jeremy and Witt, Heather and Won, Hyejung and Wong, Chloe C Y and Wray, Gregory A and Wu, Emily Y and Xu, Xuming and Yao, Lijing and Senthil, Geetha and Lehner, Thomas and Sklar, Pamela and Sestan, Nenad},
+  journal       = {Nature neuroscience},
+  title         = {{The PsychENCODE project.}},
+  year          = {2015},
+  month         = {dec},
+  number        = {12},
+  pages         = {1707--12},
+  volume        = {18},
+  doi           = {10.1038/nn.4156},
+  groups        = {bsm-ms},
+  keywords      = {genomics,psychiatric,review},
+  mendeley-tags = {genomics,psychiatric,review},
+  pmid          = {26605881},
+  url           = {http://www.ncbi.nlm.nih.gov/pubmed/26605881 https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4675669/ http://www.nature.com/neuro/journal/v18/n12/full/nn.4156.html},
 }
 @book{Gallavotti,
 abstract = {This clear book presents a critical and modern analysis of the conceptual foundations of statistical mechanics as laid down in Boltzmann's works. The author emphasises the relation between microscopic reversibility and macroscopic irreversibility, explaining fundamental concepts in detail.},
@@ -14931,17 +14933,18 @@ year = {2006}
 
 @Article{McConnell2017,
   author        = {McConnell, Michael J and Moran, John V and Abyzov, Alexej and Akbarian, Schahram and Bae, Taejeong and Cortes-Ciriano, Isidro and Erwin, Jennifer A and Fasching, Liana and Flasch, Diane A and Freed, Donald and Ganz, Javier and Jaffe, Andrew E and Kwan, Kenneth Y and Kwon, Minseok and Lodato, Michael A and Mills, Ryan E and Paquola, Apua C M and Rodin, Rachel E and Rosenbluh, Chaggai and Sestan, Nenad and Sherman, Maxwell A and Shin, Joo Heon and Song, Saera and Straub, Richard E and Thorpe, Jeremy and Weinberger, Daniel R and Urban, Alexander E and Zhou, Bo and Gage, Fred H and Lehner, Thomas and Senthil, Geetha and Walsh, Christopher A and Chess, Andrew and Courchesne, Eric and Gleeson, Joseph G and Kidd, Jeffrey M and Park, Peter J and Pevsner, Jonathan and Vaccarino, Flora M and {Brain Somatic Mosaicism Network}},
-  title         = {{Intersection of diverse neuronal genomes and neuropsychiatric disease: The Brain Somatic Mosaicism Network.}},
   journal       = {Science (New York, N.Y.)},
+  title         = {{Intersection of diverse neuronal genomes and neuropsychiatric disease: The Brain Somatic Mosaicism Network.}},
   year          = {2017},
-  volume        = {356},
+  issn          = {1095-9203},
+  month         = {apr},
   number        = {6336},
   pages         = {eaal1641},
-  month         = {apr},
-  issn          = {1095-9203},
+  volume        = {356},
   abstract      = {Neuropsychiatric disorders have a complex genetic architecture. Human genetic population-based studies have identified numerous heritable sequence and structural genomic variants associated with susceptibility to neuropsychiatric disease. However, these germline variants do not fully account for disease risk. During brain development, progenitor cells undergo billions of cell divisions to generate the {\~{}}80 billion neurons in the brain. The failure to accurately repair DNA damage arising during replication, transcription, and cellular metabolism amid this dramatic cellular expansion can lead to somatic mutations. Somatic mutations that alter subsets of neuronal transcriptomes and proteomes can, in turn, affect cell proliferation and survival and lead to neurodevelopmental disorders. The long life span of individual neurons and the direct relationship between neural circuits and behavior suggest that somatic mutations in small populations of neurons can significantly affect individual neurodevelopment. The Brain Somatic Mosaicism Network has been founded to study somatic mosaicism both in neurotypical human brains and in the context of complex neuropsychiatric disorders.},
   doi           = {10.1126/science.aal1641},
   file          = {:/home/attila/bibliography/mendeley/McConnell et al/McConnell et al. - 2017 - Intersection of diverse neuronal genomes and neuropsychiatric disease The Brain Somatic Mosaicism Network.pdf:PDF},
+  groups        = {bsm-ms},
   keywords      = {genomics,review,somatic{\_}mosaicism},
   mendeley-tags = {genomics,review,somatic{\_}mosaicism},
   pmid          = {28450582},
