--- a/presentations/2021-03-21-bsm/2021-03-21-bsm.tex
+++ b/presentations/2021-03-21-bsm/2021-03-21-bsm.tex
@@ -59,7 +59,7 @@ SCZ GWAS loci
 \includegraphics[width=1.0\columnwidth]{from-others/scz-gwas-manhattanplot.png}
 
 \footnotesize
-\(\approx\) 500 ``schizophrenia GWAS genes''
+\(\approx\) 500 ``Schizophrenia GWAS genes''
 \end{center}
 \end{column}
 
@@ -67,16 +67,40 @@ SCZ GWAS loci
 
 \includegraphics[width=1.0\columnwidth]{from-others/brainstorm-consortium-science2018-fig2.jpg}
 
+\footnotesize
+\(\approx\) 1300 ``Psychiatric GWAS genes''
 {\tiny Brainstorm Consortium 2018 Science}
 \end{column}
 \end{columns}
 \end{frame}
 
-\begin{frame}{Genomic studies on schizophrenia}
-\begin{center}
-\includegraphics[width=1.1\textwidth]{from-others/schizophrenia-Foley2017-Fig1.png}
-\end{center}
+\begin{frame}{Rare and \textit{de novo} variant studies}
+\begin{columns}[t]
+\begin{column}{0.5\textwidth}
+Genesets enriched in variants
+\begin{itemize}
+\item PSD
+\item FMRP-target
+\item Calcium channel
+\item SCZ \textit{de novo}
+\item composite (union of all above)
+\end{itemize}
+\end{column}
+
+\begin{column}{0.5\textwidth}
+
+\includegraphics[width=1.0\columnwidth]{from-others/singh-2017-fig2a.png}
+
+\tiny Singh et al 2017 Nature Genetics
+\end{column}
+\end{columns}
 \end{frame}
+
+%\begin{frame}{Genomic studies on schizophrenia}
+%\begin{center}
+%\includegraphics[width=1.1\textwidth]{from-others/schizophrenia-Foley2017-Fig1.png}
+%\end{center}
+%\end{frame}
 
 \section{Somatic variants, brain somatic mosaicism}
 
@@ -120,7 +144,7 @@ w/o ASD & 1.9 \times 10^{-3} \\
 \includegraphics[height=0.9\textheight]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/symmetric-scatter-matrix_scz.pdf}
 \end{frame}
 
-\begin{frame}{Modeling the number of calls in SCZ GWAS genes}
+\begin{frame}{Modeling the number/fraction of calls in SCZ GWAS genes}
 \begin{columns}[t]
 \begin{column}{0.5\textwidth}
 \begin{center}
@@ -131,7 +155,7 @@ Poisson, log-linear
 \item[M1] \(y \sim 1 + \mathrm{Dx} + \log_{10} n_\mathrm{calls}\)
 \end{description}
 \end{center}
-\includegraphics[scale=0.4]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-log10_ncalls-poisson-fit_scz.pdf}
+\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-log10_ncalls-poisson-fit_scz.pdf}
 \end{column}
 
 \begin{column}{0.5\textwidth}
@@ -143,14 +167,14 @@ binomial, logistic
 \item[M1] \(y \sim 1 + \mathrm{Dx} + \mathrm{ageOfDeath}\)
 \end{description}
 \end{center}
-\includegraphics[scale=0.4]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-ageOfDeath-binom-fit_scz.pdf}
+\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-ageOfDeath-binom-fit_scz.pdf}
 \end{column}
 \end{columns}
 \begin{center}
 \end{center}
 \end{frame}
 
-\begin{frame}{Finding the best fitting model for SCZ GWAS genes}{Forward variable selection algorithm}
+\begin{frame}{Model selection for SCZ GWAS genes}
 \small
 \includegraphics[width=1.0\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-fw-varsel-binom-onlyIC_scz.pdf}
 %\begin{center}
@@ -162,53 +186,77 @@ binomial, logistic
 %\end{center}
 
 \begin{center}
-\begin{tabular}{l|ccc}
-	\small
-model & \(\hat{\beta}_\mathrm{SCZ} \pm \mathrm{S.E}\) & p-value:
-\(\beta_\mathrm{SCZ} = 0\) &
-\(\mathrm{corr}(\hat{\beta}_\mathrm{SCZ}, \hat{\beta}_\ast)\) \\
+\tiny
+\begin{tabular}{l|cc}
+model formula & \(\hat{\beta}_\mathrm{SCZ} \pm \mathrm{S.E}\) & p-value: \(\beta_\mathrm{SCZ} = 0\) \\
 \hline
-1 + Dx & \(0.80 \pm 0.26\) & 0.0019 & n.a \\
-1 + Dx + DP & \(0.80 \pm 0.26\) & 0.0019 & -0.012 \\
-1 + Dx + ageOfDeath & \(0.71 \pm 0.28\) & 0.011 & -0.30 \\
+1 + Dx & \(0.80 \pm 0.26\) & 0.0019 \\
+1 + Dx + DP & \(0.80 \pm 0.26\) & 0.0019 \\
+%1 + Dx + ageOfDeath & \(0.71 \pm 0.28\) & 0.011 \\
 \end{tabular}
 \end{center}
 \end{frame}
 
-\begin{frame}{Best models for various categories}
+\begin{frame}{Addressing multicollinearity}{Exclude ``Dataset'' and
+		``ageOfDeath'' from variable selection}
+\begin{columns}[t]
+\begin{column}{0.5\textwidth}
+\begin{center}
+\small
+Harvard (H) and Sinai (S) dataset
+
+\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/Dx_Dataset_ageOfDeath_scz.pdf}
+%\includegraphics[width=1.0\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/Dx_Dataset_ageOfDeath_scz.pdf}
+
+\end{center}
+\end{column}
+
+\begin{column}{0.5\textwidth}
+\begin{center}
+\small
+Effect of collinear variables
+
+\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/collinearity_Dx_Dataset_ageOfDeath_scz.pdf}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}{Testing genomic categories for enrichment}
 \begin{center}
 \tiny
-\begin{tabular}{rrl}
+\begin{tabular}{rlr}
 \hline
-category  & size\footnote{\(n_\mathrm{indiv} \,|\, n_{\mathrm{calls} \in
-			\mathrm{category}} \ge 1\)} & best fitting model  \\
+genomic category & selected model formula & size\footnote{\(n_\mathrm{indiv} \,|\, n_{\mathrm{calls} \in \mathrm{category}} \ge 1\)} \\
 \hline
-missense & 0 & None \\
-stop gain & 1 & None \\
-splice site & 1 & None \\
-Anorexia nervosa GWAS & 4 & None \\
-deleterious low confidence & 4 & None \\
-possibly damaging & 4 & 1 \\
-ADHD GWAS & 6 & 1 + AF + DP \\
-probably damaging & 9 & 1 + DP \\
-Calcium channel & 13 & 1 + Dataset \\
-deleterious & 19 & 1 \\
-ASD GWAS & 27 & 1 + Dx + Dataset \\
-coding syn & 38 & 1 + AF + ageOfDeath \\
-MDD GWAS & 48 & 1 + ageOfDeath + AF \\
-coding nonsyn & 55 & 1 + ageOfDeath \\
-cpg island & 57 & 1 + AF + BaseQRankSum \\
-Schizophrenia GWAS & 72 & 1 + Dx \\
-Bipolar disorder GWAS & 77 & 1 + Dataset \\
-coding & 80 & 1 + ageOfDeath \\
-tfbs & 93 & 1 + AF \\
-PSD & 95 & 1 \\
-SCZ de novo & 97 & 1 + AF \\
-Psychiatric GWAS & 105 & 1 + Dataset + Dx \\
-phast & 117 & 1 + ageOfDeath + AF + DP \\
-FMRP-target & 118 & 1 + AF \\
-composite & 126 & 1 + Dx + ageOfDeath \\
-gerp & 127 & 1 + Dx \\
+coding nonsyn & 1 & 55 \\
+coding syn & 1 & 38 \\
+missense & None & 0 \\
+stop gain & None & 1 \\
+splice site & None & 1 \\
+coding & 1 & 80 \\
+deleterious & 1 & 19 \\
+deleterious low confidence & None & 4 \\
+probably damaging & 1 + DP & 9 \\
+possibly damaging & 1 & 4 \\
+tfbs & 1 + AF & 93 \\
+phast & 1 + DP + AF & 117 \\
+gerp & 1 + Dx & 127 \\
+cpg island & 1 + AF + BaseQRankSum & 57 \\
+Enh & 1 & 99 \\
+EnhG & 1 & 22 \\
+PSD & 1 & 95 \\
+FMRP-target & 1 + AF & 118 \\
+SCZ de novo & 1 + AF & 97 \\
+Calcium channel & 1 + Dx & 13 \\
+composite & 1 & 126 \\
+ADHD GWAS & 1 + AF + DP & 6 \\
+Anorexia nervosa GWAS & None & 4 \\
+ASD GWAS & 1 + Dx & 27 \\
+Bipolar disorder GWAS & 1 + Dx & 77 \\
+MDD GWAS & 1 & 48 \\
+Schizophrenia GWAS & 1 + Dx & 72 \\
+Psychiatric GWAS & 1 + Dx & 105 \\
 \end{tabular}
 \end{center}
 \end{frame}
@@ -217,7 +265,7 @@ gerp & 127 & 1 + Dx \\
 \includegraphics[width=1.0\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/resid-binom.pdf}
 \end{frame}
 
-\begin{frame}{Enrichment of somatic SNVs in various categories}
+\begin{frame}{Enrichment of categories in SNVs from SCZ}
 \includegraphics[width=1.0\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/enrichment-5-plots_scz.pdf}
 \end{frame}
 
