--- a/presentations/bsm-ms/bsm.bib
+++ b/presentations/bsm-ms/bsm.bib
@@ -8761,24 +8761,26 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/26430121},
 volume = {350},
 year = {2015}
 }
-@article{Sekar2016,
-abstract = {Schizophrenia is a heritable brain illness with unknown pathogenic mechanisms. Schizophrenia's strongest genetic association at a population level involves variation in the major histocompatibility complex (MHC) locus, but the genes and molecular mechanisms accounting for this have been challenging to identify. Here we show that this association arises in part from many structurally diverse alleles of the complement component 4 (C4) genes. We found that these alleles generated widely varying levels of C4A and C4B expression in the brain, with each common C4 allele associating with schizophrenia in proportion to its tendency to generate greater expression of C4A. Human C4 protein localized to neuronal synapses, dendrites, axons, and cell bodies. In mice, C4 mediated synapse elimination during postnatal development. These results implicate excessive complement activity in the development of schizophrenia and may help explain the reduced numbers of synapses in the brains of individuals with schizophrenia.},
-author = {Sekar, Aswin and Bialas, Allison R. and de Rivera, Heather and Davis, Avery and Hammond, Timothy R. and Kamitaki, Nolan and Tooley, Katherine and Presumey, Jessy and Baum, Matthew and {Van Doren}, Vanessa and Genovese, Giulio and Rose, Samuel A. and Handsaker, Robert E. and Daly, Mark J. and Carroll, Michael C. and Stevens, Beth and McCarroll, Steven A.},
-doi = {10.1038/nature16549},
-file = {:home/attila/bibliography/mendeley/Sekar et al/Sekar et al. - 2016 - Schizophrenia risk from complex variation of complement component 4.pdf:pdf;:home/attila/bibliography/mendeley/Sekar et al/Sekar et al. - 2016 - Schizophrenia risk from complex variation of complement component 4(2).pdf:pdf},
-isbn = {0008-5472 (Print)$\backslash$r0008-5472 (Linking)},
-issn = {0028-0836},
-journal = {Nature},
-keywords = {genomics},
-mendeley-tags = {genomics},
-month = {jan},
-pmid = {26814963},
-publisher = {Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
-shorttitle = {Nature},
-title = {{Schizophrenia risk from complex variation of complement component 4}},
-url = {http://www.nature.com/doifinder/10.1038/nature16549},
-volume = {advance on},
-year = {2016}
+
+@Article{Sekar2016,
+  author        = {Sekar, Aswin and Bialas, Allison R. and de Rivera, Heather and Davis, Avery and Hammond, Timothy R. and Kamitaki, Nolan and Tooley, Katherine and Presumey, Jessy and Baum, Matthew and {Van Doren}, Vanessa and Genovese, Giulio and Rose, Samuel A. and Handsaker, Robert E. and Daly, Mark J. and Carroll, Michael C. and Stevens, Beth and McCarroll, Steven A.},
+  journal       = {Nature},
+  title         = {{Schizophrenia risk from complex variation of complement component 4}},
+  year          = {2016},
+  issn          = {0028-0836},
+  month         = {jan},
+  volume        = {advance on},
+  abstract      = {Schizophrenia is a heritable brain illness with unknown pathogenic mechanisms. Schizophrenia's strongest genetic association at a population level involves variation in the major histocompatibility complex (MHC) locus, but the genes and molecular mechanisms accounting for this have been challenging to identify. Here we show that this association arises in part from many structurally diverse alleles of the complement component 4 (C4) genes. We found that these alleles generated widely varying levels of C4A and C4B expression in the brain, with each common C4 allele associating with schizophrenia in proportion to its tendency to generate greater expression of C4A. Human C4 protein localized to neuronal synapses, dendrites, axons, and cell bodies. In mice, C4 mediated synapse elimination during postnatal development. These results implicate excessive complement activity in the development of schizophrenia and may help explain the reduced numbers of synapses in the brains of individuals with schizophrenia.},
+  doi           = {10.1038/nature16549},
+  file          = {:/home/attila/bibliography/mendeley/Sekar et al/Sekar et al. - 2016 - Schizophrenia risk from complex variation of complement component 4.pdf:PDF;:/home/attila/bibliography/mendeley/Sekar et al/Sekar et al. - 2016 - Schizophrenia risk from complex variation of complement component 4(2).pdf:PDF},
+  groups        = {bsm-ms},
+  isbn          = {0008-5472 (Print)$\backslash$r0008-5472 (Linking)},
+  keywords      = {genomics},
+  mendeley-tags = {genomics},
+  pmid          = {26814963},
+  publisher     = {Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+  shorttitle    = {Nature},
+  url           = {http://www.nature.com/doifinder/10.1038/nature16549},
 }
 @article{Campbell2015,
 abstract = {Nearly all of the genetic material among cells within an organism is identical. However, single-nucleotide variants (SNVs), small insertions/deletions (indels), copy-number variants (CNVs), and other structural variants (SVs) continually accumulate as cells divide during development. This process results in an organism composed of countless cells, each with its own unique personal genome. Thus, every human is undoubtedly mosaic. Mosaic mutations can go unnoticed, underlie genetic disease or normal human variation, and may be transmitted to the next generation as constitutional variants. We review the influence of the developmental timing of mutations, the mechanisms by which they arise, methods for detecting mosaic variants, and the risk of passing these mutations on to the next generation.},
@@ -21957,6 +21959,27 @@ PMC3800159[pmcid]},
   groups    = {bsm-ms},
   publisher = {National Academy of Sciences},
   url       = {https://www.pnas.org/content/112/21/E2745},
+}
+
+@Article{BulikSullivan2015,
+  author   = {Bulik-Sullivan, Brendan K. and Loh, Po-Ru and Finucane, Hilary K. and Ripke, Stephan and Yang, Jian and of the Psychiatric Genomics Consortium, Schizophrenia Working Group and Patterson, Nick and Daly, Mark J. and Price, Alkes L. and Neale, Benjamin M.},
+  journal  = {Nature genetics},
+  title    = {LD Score regression distinguishes confounding from polygenicity in genome-wide association studies},
+  year     = {2015},
+  issn     = {1061-4036},
+  month    = mar,
+  number   = {25642630},
+  pages    = {291--295},
+  volume   = {47},
+  abstract = {Both polygenicity (many small genetic effects) and confounding biases, such as cryptic relatedness and population stratification, can yield an inflated distribution of test statistics in genome-wide association studies (GWAS). However, current methods cannot distinguish between inflation from a true polygenic signal and bias. We have developed an approach, LD Score regression, that quantifies the contribution of each by examining the relationship between test statistics and linkage disequilibrium (LD). The LD Score regression intercept can be used to estimate a more powerful and accurate correction factor than genomic control. We find strong evidence that polygenicity accounts for the majority of the inflation in test statistics in many GWAS of large sample size.},
+  comment  = {25642630[pmid]
+PMC4495769[pmcid]},
+  database = {PubMed},
+  doi      = {10.1038/ng.3211},
+  edition  = {2015/02/02},
+  keywords = {Computer Simulation, Genome, Human, Genome-Wide Association Study/*methods, Humans, *Linkage Disequilibrium, Polymorphism, Single Nucleotide, Regression Analysis, Sample Size},
+  language = {eng},
+  url      = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4495769/},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
